app-nodejs/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-api-svc
  namespace: nodejs-app
spec:
  selector:
    app: nodejs-api
  ports:
  - name: http
    port: 80
    targetPort: 3000
  type: ClusterIP
